--- a/practice.html
+++ b/practice.html
@@ -6,32 +6,30 @@
     <link rel="stylesheet" href="practice.css">
   </head>
   <body>
-      <header>
-        <div class="header">
-            <div class="header-left">
-                <ul>
-                    <li>TORIハウス</li>
-                    <li>素敵な暮らしをお届けします</li>
-                </ul>
-            </div>
-            <div class="header-right">
-                <ul>
-                    <li>物件概要</li>
-                    <li>現地案内図</li>
-                    <div class="top">
-                        <li>トップページへ</li>
-                    </div>
-                    <div class="resevation">
-                        <li>来場予約</li>
-                    </div>
-                    <div class="consult">
-                        <li>おうちでご相談</li>
-                    </div>
-                    <div class="claim">
-                        <li>資料請求</li>
-                    </div>
-                </ul>
-            </div>
+      <header class="header">
+        <div class="header-left">
+            <ul class="header-left-ul">
+                <li>TORIハウス</li>
+                <li>素敵な暮らしをお届けします</li>
+            </ul>
+        </div>
+        <div class="header-right">
+            <ul class="header-right-ul">
+                <li class="header-right-ul-li">物件概要</li>
+                <li class="header-right-ul-li">現地案内図</li>
+                <div class="top">
+                    <li class="header-right-ul-li">トップページへ</li>
+                </div>
+                <div class="resevation">
+                    <li class="header-right-ul-li">来場予約</li>
+                </div>
+                <div class="consult">
+                    <li class="header-right-ul-li">おうちでご相談</li>
+                </div>
+                <div class="claim">
+                    <li class="header-right-ul-li">資料請求</li>
+                </div>
+            </ul>
         </div>
       </header>
   </body>
