フォームを作成中

--- a/practice.html
+++ b/practice.html
@@ -32,5 +32,22 @@
             </ul>
         </div>
       </header>
+      <main class="main">
+        <div class="main-contents">
+            <p>来場希望日                <span>必須</span></p>
+            <div class="contents-ul-contents">
+                <p class="contents-ul-li">第1希望日</p>
+                <textarea name="" id="" cols="35" rows="1"></textarea>
+            </div>
+            <div class="contents-ul-contents">
+                <p class="contents-ul-li">第2希望日</p>
+                <textarea name="" id="" cols="35" rows="1"></textarea>
+            </div>
+            <div class="contents-ul-contents">
+                <p class="contents-ul-li">第3希望日</p>
+                <textarea name="" id="" cols="35" rows="1"></textarea>
+            </div>
+        </div>
+      </main>
   </body>
 </html>
