お客様基本情報入力フォームを作成中

--- a/practice.html
+++ b/practice.html
@@ -33,19 +33,36 @@
         </div>
       </header>
       <main class="main">
-        <div class="main-contents">
+        <h1>Reservation</h1>
+        <h2>来場予約</h2>
+        <div class="preferred-date">
             <p>来場希望日                <span>必須</span></p>
             <div class="contents-ul-contents">
-                <p class="contents-ul-li">第1希望日</p>
-                <textarea name="" id="" cols="35" rows="1"></textarea>
+                <p class="contents-p">第1希望日</p>
+                <textarea class="textarea" name="" id="" cols="35" rows="1"></textarea>
             </div>
             <div class="contents-ul-contents">
-                <p class="contents-ul-li">第2希望日</p>
-                <textarea name="" id="" cols="35" rows="1"></textarea>
+                <p class="contents-p">第2希望日</p>
+                <textarea class="textarea"  name="" id="" cols="35" rows="1"></textarea>
             </div>
             <div class="contents-ul-contents">
-                <p class="contents-ul-li">第3希望日</p>
-                <textarea name="" id="" cols="35" rows="1"></textarea>
+                <p class="contents-p">第3希望日</p>
+                <textarea class="textarea"  name="" id="" cols="35" rows="1"></textarea>
+            </div>
+        </div>
+        <div class="client-information">
+            <h1>お客様 基本情報</h1>
+            <div class="client-name">
+                <p class="client-name-p">お名前           <span>必須</span></p>
+                <textarea class="textarea"  name="" id="" cols="35" rows="1">例)山田太郎</textarea>
+            </div>
+            <div class="client-furigana">
+                <p class="client-furigana-p">フリガナ(全角カナ)           <span>必須</span></p>
+                <textarea class="textarea"  name="" id="" cols="35" rows="1">例)ヤマダタロウ</textarea>
+            </div>
+            <div class="client-address">
+                <p class="client-address">ご住所           <span>必須</span></p>
+                <textarea class="textarea"  name="" id="" cols="35" rows="1"></textarea>
             </div>
         </div>
       </main>
